--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^0.1.11",
     "emoji-picker-react": "^4.4.7",
     "fuse.js": "^6.6.2",
+    "gradio-client": "^1.0.0",
     "html-to-image": "^1.11.11",
     "mermaid": "^10.3.1",
     "nanoid": "^4.0.2",
